--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: "helvetica", sans-serif;
   text-align: center;
-  background-color: gray;
+  background-color: white;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -13,12 +13,39 @@ body {
 }
 
 #deck {
-  position: fixed;
-  top: calc(50% + 1.5rem);
-  left: 50%;
-  -webkit-transform: translate3d(-50%, -50%, 0);
-  -moz-transform: translate3d(-50%, -50%, 0);
-  -o-transform: translate3d(-50%, -50%, 0);
-  -ms-transform: translate3d(-50%, -50%, 0);
-  transform: translate3d(-50%, -50%, 0);
+  position: relative;
 }
+
+.hand-card {
+  width: auto;
+  height: 8rem;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
+
+[class*="col-"] {
+  float: left;
+  padding: 5px;
+  /* border: 1px solid red; */
+}
+
+/* .row::after {
+  content: "";
+  clear: both;
+  display: table;
+} */
