--- a/templates/index.html
+++ b/templates/index.html
@@ -41,29 +41,29 @@
   
   <div class="row">
     <div class="col-3">
-      <img class="hand-card" src="{{ url_for('static', filename='deck-of-cards/faces/back.png') }}">
-      <img class="hand-card" src="{{ url_for('static', filename='deck-of-cards/faces/back.png') }}">
+      <img class="card hand-card" src="{{ url_for('static', filename='deck-of-cards/faces/back.png') }}">
+      <img class="card hand-card" src="{{ url_for('static', filename='deck-of-cards/faces/back.png') }}">
     </div>
     <div class="col-9">
-      <img class="hand-card" src="{{ url_for('static', filename='deck-of-cards/faces/back.png') }}">
-      <img class="hand-card" src="{{ url_for('static', filename='deck-of-cards/faces/back.png') }}">
-      <img class="hand-card" src="{{ url_for('static', filename='deck-of-cards/faces/back.png') }}">
-      <img class="hand-card" src="{{ url_for('static', filename='deck-of-cards/faces/back.png') }}">
-      <img class="hand-card" src="{{ url_for('static', filename='deck-of-cards/faces/back.png') }}">
+      <img class="card board-card" src="{{ url_for('static', filename='deck-of-cards/faces/back.png') }}">
+      <img class="card board-card" src="{{ url_for('static', filename='deck-of-cards/faces/back.png') }}">
+      <img class="card board-card" src="{{ url_for('static', filename='deck-of-cards/faces/back.png') }}">
+      <img class="card board-card" src="{{ url_for('static', filename='deck-of-cards/faces/back.png') }}">
+      <img class="card board-card" src="{{ url_for('static', filename='deck-of-cards/faces/back.png') }}">
     </div>
   </div>
 
   <div class="row">
     <div class="col-3">
-      <input type="text" maxlength="2" class="card-input" name="hand1">
-      <input type="text" maxlength="2" class="card-input" name="hand2">
+      <input type="text" maxlength="3" class="card-input" name="hand1">
+      <input type="text" maxlength="3" class="card-input" name="hand2">
     </div>
     <div class="col-9">
-      <input type="text" maxlength="2" class="card-input" name="board1">
-      <input type="text" maxlength="2" class="card-input" name="board2">
-      <input type="text" maxlength="2" class="card-input" name="board3">
-      <input type="text" maxlength="2" class="card-input" name="board4">
-      <input type="text" maxlength="2" class="card-input" name="board5">
+      <input type="text" maxlength="3" class="card-input" name="board1">
+      <input type="text" maxlength="3" class="card-input" name="board2">
+      <input type="text" maxlength="3" class="card-input" name="board3">
+      <input type="text" maxlength="3" class="card-input" name="board4">
+      <input type="text" maxlength="3" class="card-input" name="board5">
     </div>
   </div>
 
