--- a/static/deck-of-cards/cards.css
+++ b/static/deck-of-cards/cards.css
@@ -1,8 +1,8 @@
 .card {
-  position: relative;
+  position: absolute;
   display: inline-block;
-  /* left: -1.9375rem;
-  top: -2.75rem; */
+  left: -1.9375rem;
+  top: -2.75rem;
   width: 3.875rem;
   height: 5.5rem;
   background-color: #fff;
