--- a/templates/index.html
+++ b/templates/index.html
@@ -19,8 +19,8 @@
       <div class="container">
         <div class="progress-wrap">
          <ol class="progress-wizard">
-           <li class="progress-point done stepone">Pre Flop</li>
-           <li class="progress-point current todo steptwo">Flop</li>
+           <li class="progress-point current todo stepone">Pre Flop</li>
+           <li class="progress-point todo steptwo">Flop</li>
            <li class="progress-point todo stepthree">Turn</li>
            <li class="progress-point todo stepfour">River</li>
          </ol>
@@ -55,15 +55,15 @@
 
   <div class="row">
     <div class="col-3">
-      <input type="text" maxlength="3" class="card-input" name="hand1">
-      <input type="text" maxlength="3" class="card-input" name="hand2">
+      <input type="text" maxlength="3" class="card-input hidden" name="hand1">
+      <input type="text" maxlength="3" class="card-input hidden" name="hand2">
     </div>
     <div class="col-9">
-      <input type="text" maxlength="3" class="card-input" name="board1">
-      <input type="text" maxlength="3" class="card-input" name="board2">
-      <input type="text" maxlength="3" class="card-input" name="board3">
-      <input type="text" maxlength="3" class="card-input" name="board4">
-      <input type="text" maxlength="3" class="card-input" name="board5">
+      <input type="text" maxlength="3" class="card-input hidden" name="board1">
+      <input type="text" maxlength="3" class="card-input hidden" name="board2">
+      <input type="text" maxlength="3" class="card-input hidden" name="board3">
+      <input type="text" maxlength="3" class="card-input hidden" name="board4">
+      <input type="text" maxlength="3" class="card-input hidden" name="board5">
     </div>
   </div>
 
