--- a/templates/index.html
+++ b/templates/index.html
@@ -57,6 +57,9 @@
     <div class="col-3">
       <input type="text" maxlength="3" class="card-input hidden" name="hand1">
       <input type="text" maxlength="3" class="card-input hidden" name="hand2">
+      <form action="/calculate" method="post">
+        <input type="submit" value="Submit">
+      </form> 
     </div>
     <div class="col-9">
       <input type="text" maxlength="3" class="card-input hidden" name="board1">
@@ -67,5 +70,30 @@
     </div>
   </div>
 
+  <div id="app"></div>
+  <script>
+
+      fetch('https://jsonplaceholder.typicode.com/posts').then(function (response) {
+        // The API call was successful!
+        return response.json();
+      }).then(function (data) {
+        // This is the JSON from our response
+        console.log(data);
+      }).catch(function (err) {
+        // There was an error
+        console.warn('Something went wrong.', err);
+      });
+
+    // in main.js
+    function loadContent(){
+      var contentDiv = document.getElementById("app");
+      contentDiv.innerHTML = location.hash;
+    }
+
+
+    window.addEventListener("hashchange", loadContent);
+
+    loadContent();
+  </script>
 </body>
 </html>
