--- a/templates/index.html
+++ b/templates/index.html
@@ -71,16 +71,18 @@
   </div>
 
 
-  
+
   <div id="app"></div>
   <script>
 
-      fetch('https://jsonplaceholder.typicode.com/posts').then(function (response) {
+      fetch('http://localhost:8080/calculate').then(function (response) {
         // The API call was successful!
         return response.json();
       }).then(function (data) {
         // This is the JSON from our response
         console.log(data);
+        var contentDiv = document.getElementById("app");
+        contentDiv.innerHTML = data.win;
       }).catch(function (err) {
         // There was an error
         console.warn('Something went wrong.', err);
