--- a/static/style.css
+++ b/static/style.css
@@ -55,7 +55,7 @@ body {
 }
 
 /* PROGRESS BAR */
-.container {
+.turn-progress-bar-container {
   width: auto;
   margin: 50px auto;
   font-family: Arial, sans-serif;
@@ -209,4 +209,62 @@ body {
 
 .visible {
   visibility: visible;
+}
+
+/* Calculation Progress Bar */
+
+.calculation-progress-bar-container {
+  width: 40%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  background: #fff;
+  box-sizing: border-box;
+  box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+}
+
+h1 {
+  margin: 0;
+  padding: 0;
+  color: #000000;
+  letter-spacing: 4px;
+}
+
+.progress-bar {
+  box-sizing: border-box;
+  width: 100%;
+  margin: 20px 0;
+}
+
+.progress-bar p{
+  color: #000000;
+  margin: 0 0 10px;
+  padding: 0;
+  font-weight: bold;
+}
+
+.progress-bar p:nth-child(2){
+  float: right;
+  position: relative;
+  top: -30px;
+}
+
+.percentage{
+  background: #333333;
+  padding: 4px;
+  box-sizing: border-box;
+  border: 0.5px solid #009999;
+  border-radius: 6px;
+}
+
+.level{
+  background: #009999;
+  width: 0%;
+  height: 10px;
+  border-radius: 6px;
+  
+  animation: level 3s infinite;
 }
