--- a/templates/index.html
+++ b/templates/index.html
@@ -77,13 +77,10 @@
   </form>
 
   <div class="calculation-progress-bar-container hidden">
-    <h1>CALCULATING...</h1>
-    <div class="progress-bar">
-      <p>Progress</p>
-      <p id="calculation-progress-txt">0%<p/>
-      <div class="percentage">
-        <div class="level"></div>
-      </div>
+    <div class="loader">
+      <div class="bar1"></div>
+      <div class="bar2"></div>
+      <div class="bar3"></div>
     </div>
   </div>
 
