--- a/static/style.css
+++ b/static/style.css
@@ -6,7 +6,7 @@ body {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  overflow: hidden;
+  overflow: scroll;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   text-size-adjust: 100%;
@@ -140,14 +140,14 @@ body {
 }
 
 .progress-wizard li.done {
-  color: #f43d4d;
-  border-top-color: #f43d4d;
+  color: #919191;
+  border-top-color: #919191;
   cursor: pointer;
 }
 
 .progress-wizard li.done:before {
   color: white;
-  background-color: #f43d4d;
+  background-color: #919191;
   border: 5px solid #e4e4e4;
   position: relative;
   top: -22px;
@@ -200,11 +200,11 @@ body {
 }
 
 .progress-wizard li.current {
-  color: #f4828c;
+  color: #919191;
 }
 
 .progress-wizard li.current:before {
-  background: #f4828c;
+  background: #919191;
   color: #fff;
   text-shadow: none;
 }
@@ -235,7 +235,7 @@ body {
 .bar1 {
   width: 10px;
   height: 5px;
-  background: #f43d4d;
+  background: #919191;
   margin: 2px;
   animation: bar 1s infinite linear;
   animation-delay: 0s;
@@ -244,7 +244,7 @@ body {
 .bar2 {
   width: 10px;
   height: 5px;
-  background: #f43d4d;
+  background: #919191;
   margin: 2px;
   animation: bar 1s infinite linear;
   animation-delay: 0.25s;
@@ -253,7 +253,7 @@ body {
 .bar3 {
   width: 10px;
   height: 5px;
-  background: #f43d4d;
+  background: #919191;
   margin: 2px;
   animation: bar 1s infinite linear;
   animation-delay: 0.5s;
@@ -276,31 +276,31 @@ body {
 /* RANGE TABLE */
 .range-table {
 	display: grid;
-	grid-template-columns: repeat(13, 4rem);
-	grid-template-rows: repeat(13, 4rem);
-	margin: auto;
-	justify-content: center;
+	grid-template-columns: repeat(13, 3rem);
+	grid-template-rows: repeat(13, 3rem);
+  margin: auto;
+  justify-content: center;
 }
 
 .range-element-inner {
   background: white;
   border: 0.1rem solid black;
   padding: 0.2rem;
-  width: 3rem;
-  height: 4rem;
+  width: 2.5rem;
+  height: 2.5rem;
   transition: inherit;
 }
 
 .title {
-  font: 700 24px/1.3 "Poppins", sans-serif;
-  margin-top: -0.5rem;
+  font: 700 12px/1.3 "Poppins", sans-serif;
+  margin-top: 0;
   margin-left: 0;
   margin-bottom: 1rem;
   margin-right: 0;
 }
 
 .description {
-  font: 500 12px "Poppins", sans-serif;
+  font: 500 10px "Poppins", sans-serif;
   margin-top: -1rem;
 }
 
