Add onclick functionality to range table

--- a/static/style.css
+++ b/static/style.css
@@ -307,3 +307,11 @@ body {
 .hand-odds {
   float: left;
 }
+
+.selected-combination {
+  background-color: #919191;
+}
+
+.unselected-combination {
+  background-color: white;
+}
