feature: allows user to select options for preflop range narrowing

--- a/templates/index.html
+++ b/templates/index.html
@@ -84,7 +84,7 @@
 
   <select name="action" id="action">
     <option value="RFI">RFI</option>
-    <option value="Raise">Raise</option>
+    <option value="Raise" selected="selected">Raise</option>
     <option value="3bet">3bet</option>
     <option value="4bet">4bet</option>
   </select>
