--- a/templates/index.html
+++ b/templates/index.html
@@ -302,19 +302,19 @@
         </div>
         <!-- END OF ROW 4 -->
         <div class="range-element-inner unselected-combination">
-          <p class="title">ATs</p>
+          <p class="title">ATo</p>
           <p class="description">R: 5%</p>
         </div>
         <div class="range-element-inner unselected-combination">
-          <p class="title">KTs</p>
+          <p class="title">KTo</p>
           <p class="description">5%</p>
         </div>
         <div class="range-element-inner unselected-combination">
-          <p class="title">QTs</p>
+          <p class="title">QTo</p>
           <p class="description">5%</p>
         </div>
         <div class="range-element-inner unselected-combination">
-          <p class="title">KTs</p>
+          <p class="title">KTo</p>
           <p class="description">5%</p>
         </div>
         <div class="range-element-inner unselected-combination">
