Update range table PREFLOP with predetermined range.

--- a/templates/index.html
+++ b/templates/index.html
@@ -379,31 +379,31 @@
           <p class="description">5%</p>
         </div>
         <div class="range-element-inner unselected-combination">
-          <p class="title">98o</p>
+          <p class="title">98s</p>
           <p class="description">5%</p>
         </div>
         <div class="range-element-inner unselected-combination">
-          <p class="title">97o</p>
+          <p class="title">97s</p>
           <p class="description">5%</p>
         </div>
         <div class="range-element-inner unselected-combination">
-          <p class="title">96o</p>
+          <p class="title">96s</p>
           <p class="description">5%</p>
         </div>
         <div class="range-element-inner unselected-combination">
-          <p class="title">95o</p>
+          <p class="title">95s</p>
           <p class="description">5%</p>
         </div>
         <div class="range-element-inner unselected-combination">
-          <p class="title">94o</p>
+          <p class="title">94s</p>
           <p class="description">5%</p>
         </div>
         <div class="range-element-inner unselected-combination">
-          <p class="title">93o</p>
+          <p class="title">93s</p>
           <p class="description">5%</p>
         </div>
         <div class="range-element-inner unselected-combination">
-          <p class="title">92o</p>
+          <p class="title">92s</p>
           <p class="description">5%</p>
         </div>
         <!-- END OF ROW 6 -->
